favicon and plp sort filter

--- a/Build_v6/pages/PLP.html
+++ b/Build_v6/pages/PLP.html
@@ -364,17 +364,19 @@
                             <ul id="sort-menu">
                                 <li class="facet">
                                     <ul class="facet-content">
+                                        
                                         <li class="chkbox-item">
-                                            <a href="" class="chkbox-link"><span class="rts-chkbox"></span>Our Picks</a>
+                                            <a href="" data-description="Our Picks" data-name="our-picks" class="chkbox-link">Our Picks</a>
+                                        </li>
+
+                                        <li class="chkbox-item">
+                                            <a href="" data-description="New In" data-name="new-in" class="chkbox-link">New In</a>
+                                        </li>
+                                        <li class="chkbox-item active">
+                                            <a href="" data-description="Price: High to Low" data-name="price-high" class="chkbox-link">Price: High to Low</a>
                                         </li>
                                         <li class="chkbox-item">
-                                            <a href="" class="chkbox-link"><span class="rts-chkbox"></span>New In</a>
-                                        </li>
-                                        <li class="chkbox-item selected">
-                                            <a href="" class="chkbox-link"><span class="rts-chkbox"></span>Price: High to Low</a>
-                                        </li>
-                                        <li class="chkbox-item">
-                                            <a href="" class="chkbox-link"><span class="rts-chkbox"></span>Price: Low to High</a>
+                                            <a href="" data-description="Price: Low to High" data-name="price-low" class="chkbox-link">Price: Low to High</a>
                                         </li>
                                     </ul>  
                                 </li>
