Header CSS amends

--- a/Build_v6/index.html
+++ b/Build_v6/index.html
@@ -82,7 +82,7 @@
                             <span class="signin-acc-name">Hannah</span>
                         </a>
                         <div class="customer-serv-dropdown">
-                            <ul>
+                            <ul class="help-list">
                                 <li><a href="#" class="cust-serv-link">My Orders</a></li>
                                 <li><a href="#" class="cust-serv-link">Account</a></li>
                                 <li><a href="#" class="cust-serv-link">Sign out</a></li>
