mobile menu and search - close when click on body
- close when click on body

--- a/Build_v6/index.html
+++ b/Build_v6/index.html
@@ -491,8 +491,8 @@
 
                 <div class="mob-menu-footer">
                     <div class="btn-container">
-                        <a href="" class="btn-round">Sign In</a>
-                        <a href="" class="btn-round">New Customer</a>
+                        <a href="" class="btn-rnd-purp-bg">Sign In</a>
+                        <a href="" class="btn-rnd-purp-bg">New Customer</a>
                     </div>
 
                     <ul class="acc-signed-in">
@@ -503,7 +503,7 @@
                     <ul>
                         <li><a href="mailto:" class="email-a">Email Us for Assistance</a></li>
                         <li><a href="mailto:" class="help-a">FAQs</a></li>
-                        <li><a href="" class="dropdown-a"><span>Country: &nbsp; &nbsp;</span><span class="link-a">United Kingdom/ £ GBP</span></a></li>
+                        <!-- <li><a href="" class="dropdown-a"><span>Country: &nbsp; &nbsp;</span><span class="link-a">United Kingdom/ £ GBP</span></a></li> -->
                     </ul>
                 </div>
             </nav>
@@ -797,16 +797,10 @@
 
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
+        <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="js/script.js"></script>
+        <script type="text/javascript" src="js/plugins/slick/slick.min.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     </body>
 </html>
 
