Checkout CSS amends

--- a/Build_v6/pages -checkout/02_Signin.html
+++ b/Build_v6/pages -checkout/02_Signin.html
@@ -57,7 +57,7 @@
                                         <input type="text" name="emailAddress" class="chk-input">
                                     </div>
 
-                                    <button class="btn-round-pink">Checkout</button>
+                                    <button class="btn-round-primary">Checkout</button>
                                 </div>
                             </div>
                         </form>
