--- a/Build_v6/pages -checkout/03a_Reg User Landing .html
+++ b/Build_v6/pages -checkout/03a_Reg User Landing .html
@@ -193,7 +193,7 @@
                                     </div> 
                                 </div>
 
-                                <div class="place-order">
+                                <div class="place-order finalpay">
                                     <div class="terms"> By completing your order, you accept our <a href="">Terms and Conditions of Sale.</a></div>
                                     <button class="btn-round-pink">Place Order and Pay</button>
                                 </div> 
