--- a/Build_v6/pages -checkout/05_Order confirmation.html
+++ b/Build_v6/pages -checkout/05_Order confirmation.html
@@ -66,7 +66,7 @@
                                     </div>
 
                                     <div class="select-option">
-                                        <input type="checkbox" checked name="subscribe" id="subscribe">
+                                        <input type="checkbox" name="subscribe" id="subscribe">
                                         <label for="subscribe" class="radio-wrapper">
                                             <span class="radio-btn"></span>
                                             <span class="chkbox-label">Yes, I'd like to receive updates from Rites</span>
