--- a/Build_v6/pages -checkout/04a_Reg User_change info.html
+++ b/Build_v6/pages -checkout/04a_Reg User_change info.html
@@ -206,7 +206,7 @@
                                     <button class="btn-add btn-space">+  Add New Card</button>
                                 </div>
 
-                                <div class="place-order">
+                                <div class="place-order finalpay">
                                     <div class="terms"> By completing your order, you accept our <a href="">Terms and Conditions of Sale.</a></div>
                                     <button class="btn-round-pink">Place Order and Pay</button>
                                 </div> 
