PLP filter - selecting and clearing filters

--- a/Build_v6/pages/PLP.html
+++ b/Build_v6/pages/PLP.html
@@ -517,7 +517,7 @@
 
                         <div class="filter-container">
                             <span class="btn-dropdown">Style
-                                <span class="filter-active">(<span class="count">0</span>)</span>
+                                <span class="count">0</span>
                             </span>
 
                             <ul class="filter-menu">
@@ -542,7 +542,7 @@
 
                        <div class="filter-container">
                             <span class="btn-dropdown">
-                            Size <span class="filter-active">(<span class="count">0</span>)</span></span>
+                            Size <span class="count">0</span></span>
 
                             <ul class="filter-menu size-filter">
                                 <li class="facet">
@@ -572,7 +572,7 @@
 
                         <div class="filter-container">
                             <span class="btn-dropdown">
-                            Designer <span class="filter-active">(<span class="count">0</span>)</span></span>
+                            Designer <span class="count">0</span></span>
 
                             <ul class="filter-menu">
                                 <li class="facet">
@@ -626,7 +626,7 @@
 
                         <div class="filter-container">
                             <span class="btn-dropdown">
-                            Colour <span class="filter-active">(<span class="count">0</span>)</span></span>
+                            Colour <span class="count">0</span></span>
 
                             <ul class="filter-menu" class="filter">
                                 <li class="facet color-list">
@@ -671,7 +671,7 @@
 
                         <div class="filter-footer">
                             <button type="button" id="clear" class="btn-round-sec">Clear All</button>
-                            <button type="button" id="close" class="btn-round-primary">Apply</button>
+                            <button type="button" id="apply" class="btn-round-primary">Apply</button>
                         </div>                    
                     </div>
 
@@ -1158,6 +1158,7 @@
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="../js/script.js"></script>
+        <script src="../js/plp.js"></script>
         <script type="text/javascript" src="../js/plugins/slick/slick.min.js"></script>
 
     
