PLP infinite scroll

--- a/Build_v6/pages-plp/PLP.html
+++ b/Build_v6/pages-plp/PLP.html
@@ -732,9 +732,9 @@
             </div>
 
             <section class="listing-products">
-                <div class="products-wrapper">
+                <div class="products-wrapper container">
 
-                    <div class="listing-item">
+                    <div class="listing-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/pdp_1.jpg" />
@@ -753,7 +753,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-item">
+                    <div class="listing-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/pdp_1.jpg" />
@@ -772,7 +772,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-landscape-item">
+                    <div class="listing-landscape-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/plp_landscape.png" />
@@ -791,7 +791,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-item">
+                    <div class="listing-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/pdp_1.jpg" />
@@ -810,7 +810,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-item">
+                    <div class="listing-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/pdp_1.jpg" />
@@ -829,7 +829,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-item">
+                    <div class="listing-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/pdp_1.jpg" />
@@ -848,7 +848,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-item">
+                    <div class="listing-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/pdp_1.jpg" />
@@ -867,7 +867,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-item">
+                    <div class="listing-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/pdp_1.jpg" />
@@ -886,7 +886,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-landscape-item">
+                    <div class="listing-landscape-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/plp_landscape.png" />
@@ -905,7 +905,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-item">
+                    <div class="listing-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/pdp_1.jpg" />
@@ -924,7 +924,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-item">
+                    <div class="listing-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/pdp_1.jpg" />
@@ -943,7 +943,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-item">
+                    <div class="listing-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/pdp_1.jpg" />
@@ -962,7 +962,7 @@
                         </div> 
                     </div>
 
-                    <div class="listing-item">
+                    <div class="listing-item post">
                         <div class="img-container"> 
                             <a href="">
                                 <img src="../css/images/pdp_1.jpg" />
@@ -982,8 +982,19 @@
                     </div>
                 </div>
 
+               <!--  <div class="page-load-status">
+                  <div class="loader-ellips infinite-scroll-request">
+                    <span class="loader-ellips__dot"></span>
+                    <span class="loader-ellips__dot"></span>
+                    <span class="loader-ellips__dot"></span>
+                    <span class="loader-ellips__dot"></span>
+                  </div>
+                  <p class="infinite-scroll-last">End of content</p>
+                  <p class="infinite-scroll-error">No more pages to load</p>
+                </div> -->
+
                 <div class="listing-load">
-                    <button type="button" class="load-more">Load More</button>
+                  <a class="pagination__next load-more" href="page2.html">Load More</a>
                 </div>
 
             </section>   
@@ -1157,7 +1168,9 @@
         <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="../js/script.js"></script>
         <script src="../js/plp.js"></script>
-        <script type="text/javascript" src="../js/plugins/slick/slick.min.js"></script>
+                <script type="text/javascript" src="../js/plugins/slick/slick.min.js"></script>
+
+        <script type="text/javascript" src="../js/plugins/infinite-scroll.pkgd.min.js"></script>
 
     
     </body>
