--- a/Build_v6/index.html
+++ b/Build_v6/index.html
@@ -795,11 +795,15 @@
             </div>
         </footer>
 
+        <div class="privacybanner banner">
+            <div class="privacy-text">We use cookies on this website to make your experience better. By continuing to browse you agree to our use of cookies. For further info <a href="/" class="white-a" target="_blank">click here</a></div>
+            <div class="icon-close-white banner-close"></div>
+        </div>
+
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="js/script.js"></script>
-        <script src="js/plp.js"></script>
         <script type="text/javascript" src="js/plugins/slick/slick.min.js"></script>
 
     </body>
