PLP - Sort select
update sort menu when click on text - be able to click text and surrounding area

--- a/Build_v6/pages-plp/PLP.html
+++ b/Build_v6/pages-plp/PLP.html
@@ -689,7 +689,7 @@
 
                             <span class="btn-dropdown">Sort<span class="sort-selected">: Price - High to Low</span></span>
                             
-                            <ul id="sort-menu">
+                            <ul id="sort-menu" style="display: block">
                                 <li class="facet">
                                     <ul class="facet-content">
                                         
