Size select on filter PLP and PDP

--- a/Build_v6/pages-plp/PLP.html
+++ b/Build_v6/pages-plp/PLP.html
@@ -544,7 +544,7 @@
                             <span class="btn-dropdown">
                             Size <span class="count">0</span></span>
 
-                            <ul class="filter-menu size-filter">
+                            <ul class="filter-menu size-filter" style="display: block">
                                 <li class="facet">
                                     <ul class="size-facet">
                                         <li class="size-item">
@@ -689,7 +689,7 @@
 
                             <span class="btn-dropdown">Sort<span class="sort-selected">: Price - High to Low</span></span>
                             
-                            <ul id="sort-menu" style="display: block">
+                            <ul id="sort-menu">
                                 <li class="facet">
                                     <ul class="facet-content">
                                         
