--- a/Build_v6/pages/PDP.html
+++ b/Build_v6/pages/PDP.html
@@ -215,12 +215,16 @@
 
 
                                 <div class="picker-container clearfix">
-                                    <div class="size-picker">    <div class="size-item"> 
+                                    <div class="size-picker">
+                                    
+                                    
+                                        <div class="size-item"> 
                                             <span class="size-value">6</span> 
                                         </div>
 
                                         <div class="size-item outofstock"> 
                                             <span class="size-value">8</span> 
+                                            <span class="crossthrough"></span>
                                         </div>
 
                                         <div class="size-item"> 
