Designer page CSS

--- a/Build_v6/pages-plp/PLP.html
+++ b/Build_v6/pages-plp/PLP.html
@@ -544,7 +544,7 @@
                             <span class="btn-dropdown">
                             Size <span class="count">0</span></span>
 
-                            <ul class="filter-menu size-filter" style="display: block">
+                            <ul class="filter-menu size-filter">
                                 <li class="facet">
                                     <ul class="size-facet">
                                         <li class="size-item">
