--- a/Build_v6/index.html
+++ b/Build_v6/index.html
@@ -99,7 +99,14 @@
                     <a href="/" class="info-bag active">
                         <span class="icon-bag"></span>
                         <span class="bag-count">3</span>
+
                     </a>
+                     <div class="bag-success">
+                            <ul class="help-list">
+                                <li><a href="#" class="cust-serv-link">Item Added!</a></li>
+                            </ul>
+                    </div>
+                   
                 </div>
 
             </div>
