--- a/Build_v6/pages -checkout/03_Guest Landing.html
+++ b/Build_v6/pages -checkout/03_Guest Landing.html
@@ -264,10 +264,10 @@
                                                     <input type="tel" name="ccv" class="chk-input">
                                                 </div>
 
-                                                <a href="" class="tooltip">
+                                                <div class="tooltip">
                                                     <span class="bg-question"></span>
                                                     <div class="tooltext">CVV is the 3 or 4 digit code that can be found on the front or back of a credit card</div>
-                                                </a> 
+                                                </div> 
                                             </div>
                                         </div>
                                     </div>
@@ -374,7 +374,12 @@
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="../js/plugins.js"></script>
-        <script src="../js/script.js"></script>
+       
+
+        <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+        <script type="text/javascript" src="../js/plugins/slick/slick.min.js"></script>
+         <script src="../js/script.js"></script>
 
     
     </body>
