--- a/Build_v6/pages - My account/01_My Acc_Sign In.html
+++ b/Build_v6/pages - My account/01_My Acc_Sign In.html
@@ -176,7 +176,7 @@
                             <li class="tabs-title active">Register</li>
                         </ul>
 
-                        <div class="detail-step">
+                        <div class="detail-step signin">
                             <div class="step-head">
                                 <h3 class="step-title">Returning Customer</h3>
                             </div>
@@ -228,7 +228,7 @@
 
                         </div>
 
-                        <div class="detail-step">
+                        <div class="detail-step create-reg">
                             <div class="step-head">
                                 <h3 class="step-title">New to Rites.co?</h3>
                             </div>
@@ -297,7 +297,12 @@
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="../js/plugins.js"></script>
-        <script src="../js/script.js"></script>
+       
+
+        <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+        <script type="text/javascript" src="../js/plugins/slick/slick.min.js"></script>
+         <script src="../js/script.js"></script>
 
     
     </body>
